--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -5,9 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-
+    tools:context=".Add">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,8 +18,8 @@
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:scaleType="center"
-            android:id="@+id/btn_plus"
-            android:src="@drawable/ic_baseline_add_24"/>
+            android:id="@+id/btn_back"
+            android:src="@drawable/ic_baseline_arrow_white_24"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -39,8 +37,5 @@
 
 
     </LinearLayout>
-
-
-
 
 </LinearLayout>
