--- a/app/src/main/res/layout/item_rv_memo.xml
+++ b/app/src/main/res/layout/item_rv_memo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="3dp"
-    android:background="#FFC0BC"
+    android:background="#E4D97A"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -32,7 +32,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="0"
-                    android:background="#FFCECE"
+                    android:background="#E4D97A"
                     android:gravity="center_vertical"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
@@ -45,7 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="2"
-                    android:background="#00FFFFFF"
+                    android:background="#E4D97A"
                     android:gravity="center_vertical"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
